--- a/assets/scss/side.scss
+++ b/assets/scss/side.scss
@@ -47,10 +47,10 @@
 
       &:hover {
         .thumbnail {
-          transform: rotate(666turn);
-          transition-delay: 1s;
-          transition-property: all;
-          transition-duration: 59s;
+          transform: rotate(3turn);
+          transition-delay: 0.5s;
+          transition-property: transform;
+          transition-duration: 2s;
           transition-timing-function: cubic-bezier(.34, 0, .84, 1);
         }
       }
@@ -63,6 +63,11 @@
     .thumbnail {
       margin-right: 10px;
       border-radius: 50%;
+      transform: rotate(0turn);
+      transition-delay: 0s;
+      transition-property: transform;
+      transition-duration: 2s;
+      transition-timing-function: cubic-bezier(.34, 0, .84, 1);
     }
 
     .thumbnail-text {
