fix: 修复首页最新评论呢称过长改用省略号代替

--- a/assets/scss/side.scss
+++ b/assets/scss/side.scss
@@ -85,6 +85,9 @@
     .author {
       height: 20px;
       font-weight: 600;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
 
     .comment-text {
